force-app/main/default/objects/refedge__Reference_Requests_and_Invitations__c/fields/refedge__Attendee_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>refedge__Attendee_Created_Date__c</fullName>
    <formula>refedge__Attendee__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Created Date</label>
    <type>DateTime</type>
</CustomField>