force-app/main/default/objects/refedge__Reference_Requests_and_Invitations__c/fields/refedge__Feedback_Success__c.field-meta.xml
<CustomField>
    <fullName>refedge__Feedback_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Feedback Success</label>
    <type>Checkbox</type>
</CustomField>