force-app/main/default/objects/refedge__Reference_Requests_and_Invitations__c/fields/refedge__Invitation__c.field-meta.xml
<CustomField>
    <fullName>refedge__Invitation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invitation</label>
    <referenceTo>refedge__Invitation__c</referenceTo>
    <relationshipLabel>Reference Requests and Invitations</relationshipLabel>
    <relationshipName>Reference_Requests_and_Invitations</relationshipName>
    <type>Lookup</type>
</CustomField>