force-app/main/default/objects/refedge__Reference_Requests_and_Invitations__c/fields/refedge__Invitation_CreatedDate_f__c.field-meta.xml
<CustomField>
    <fullName>refedge__Invitation_CreatedDate_f__c</fullName>
    <formula>refedge__Invitation__r.CreatedDate</formula>
    <label>Invitation CreatedDate</label>
    <type>DateTime</type>
</CustomField>