force-app/main/default/objects/refedge__Reference_Requests_and_Invitations__c/fields/refedge__Managed_Completed__c.field-meta.xml
<CustomField>
    <fullName>refedge__Managed_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Managed Completed</label>
    <type>Checkbox</type>
</CustomField>