force-app/main/default/objects/refedge__Reference_Requests_and_Invitations__c/fields/refedge__Microsite_Visit__c.field-meta.xml
<CustomField>
    <fullName>refedge__Microsite_Visit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Microsite Visit</label>
    <type>Checkbox</type>
</CustomField>