force-app/main/default/objects/refedge__Reference_Requests_and_Invitations__c/fields/refedge__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>refedge__Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Reference Requests and Invitations</relationshipLabel>
    <relationshipName>Reference_Requests_and_Invitations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>