force-app/main/default/objects/refedge__Reference_Requests_and_Invitations__c/fields/refedge__Reference_Request__c.field-meta.xml
<CustomField>
    <fullName>refedge__Reference_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Request</label>
    <referenceTo>refedge__Reference_Request__c</referenceTo>
    <relationshipLabel>Reference Requests and Invitations</relationshipLabel>
    <relationshipName>Reference_Requests_and_Invitations</relationshipName>
    <type>Lookup</type>
</CustomField>